--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,9 @@
     <link rel="manifest" href="/manifest.json" />
     
     <!-- iOS PWA Support -->
-    <link rel="apple-touch-icon" href="/icon-192.png" />
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 192 192'><rect width='192' height='192' fill='%23003764'/><text x='50%25' y='50%25' font-size='120' font-family='Arial' fill='white' text-anchor='middle' dominant-baseline='middle'>I</text></svg>" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="Inspect360" />
@@ -21,15 +23,30 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <script>
-      if ('serviceWorker' in navigator) {
+      // Only register service worker in production mode
+      if ('serviceWorker' in navigator && window.location.hostname !== 'localhost' && window.location.hostname !== '127.0.0.1') {
         window.addEventListener('load', () => {
           navigator.serviceWorker.register('/sw.js')
             .then((registration) => {
               console.log('Service Worker registered:', registration);
             })
             .catch((error) => {
-              console.error('Service Worker registration failed:', error);
+              // Silently fail in development - service workers can be problematic
+              if (window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1') {
+                console.log('Service Worker registration skipped in development mode');
+              } else {
+                console.error('Service Worker registration failed:', error);
+              }
             });
+        });
+      } else if ('serviceWorker' in navigator && (window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1')) {
+        // Unregister any existing service workers in development
+        navigator.serviceWorker.getRegistrations().then((registrations) => {
+          registrations.forEach((registration) => {
+            registration.unregister().then(() => {
+              console.log('Service Worker unregistered for development mode');
+            });
+          });
         });
       }
     </script>
